todo-project/manifests/base/middleware.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: todo-project-stripprefix-middleware
  labels:
    project: todo-project
spec:
  stripPrefix:
    prefixes:
      - /prod
      - /staging
