todo-project/manifests/base/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-project-broadcaster-dep
  labels:
    project: todo-project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-project-broadcaster
  template:
    metadata:
      labels:
        app: todo-project-broadcaster
    spec:
      containers:
        - name: broadcaster
          image: TODO_PROJECT_BROADCASTER/IMAGE
