todo-project/manifests/base/rollout.yaml
---
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: todo-project-dep
  labels:
    project: todo-project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-project
  strategy:
    canary:
      steps:
        - setWeight: 100
        - pause:
            duration: 1m
            until: allAvailable
        - analysis:
            templates:
              - templateName: cpu-limit-monitor
            abortOnFailure: true
  template:
    metadata:
      labels:
        app: todo-project
    spec:
      securityContext:
        fsGroup: 2000
      volumes:
        - name: next-cache
          emptyDir: {}
        - name: data-volume
          persistentVolumeClaim:
            claimName: todo-project-data-pvc
      containers:
        - name: frontend
          image: TODO_PROJECT_FRONTEND/IMAGE
          readinessProbe:
            initialDelaySeconds: 10
            periodSeconds: 5
            httpGet:
              path: /healthz
              port: 3000
          ports:
            - containerPort: 3000
          resources:
            limits:
              cpu: "100m"
              memory: "100Mi"
          volumeMounts:
            - name: next-cache
              mountPath: /usr/src/app/.next/cache
        - name: backend
          image: TODO_PROJECT_BACKEND/IMAGE
          readinessProbe:
            initialDelaySeconds: 10
            periodSeconds: 5
            httpGet:
              path: /healthz
              port: 8080
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: "100m"
              memory: "100Mi"
        - name: imagenator
          image: TODO_PROJECT_IMAGENATOR/IMAGE
          securityContext:
            runAsUser: 1001
            runAsGroup: 2000
          ports:
            - containerPort: 5000
          resources:
            limits:
              cpu: "50m"
              memory: "100Mi"
          volumeMounts:
            - name: data-volume
              mountPath: /usr/src/app/data
