todo-project/manifests/base/statefulset.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: todo-project-database-stset
  labels:
    project: todo-project
spec:
  serviceName: todo-project-database-svc
  replicas: 1
  selector:
    matchLabels:
      app: todo-project-database
  template:
    metadata:
      labels:
        app: todo-project-database
    spec:
      containers:
        - name: postgres
          image: postgres:13
          ports:
            - containerPort: 5432
          resources:
            limits:
              cpu: "100m"
              memory: "200Mi"
          volumeMounts:
            - name: todo-project-database-pgdata
              mountPath: /var/lib/postgresql/data
              subPath: todo-project-pgdata
  volumeClaimTemplates:
    - metadata:
        name: todo-project-database-pgdata
        labels:
          project: todo-project
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 100Mi
