todo-project/manifests/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: todo-project-svc
  labels:
    project: todo-project
spec:
  type: NodePort
  selector:
    app: todo-project
  ports:
    - name: backend
      protocol: TCP
      port: 8080
      targetPort: 8080
    - name: frontend
      protocol: TCP
      port: 3000
      targetPort: 3000
    - name: imagenator
      protocol: TCP
      port: 5000
      targetPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: todo-project-database-svc
  labels:
    project: todo-project
spec:
  type: ClusterIP
  selector:
    app: todo-project-database
  ports:
    - port: 5432
      protocol: TCP
      targetPort: 5432
